name:                robinhood
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Lennart Kolmodin
maintainer:          kolmodin@gmail.com
copyright:           2013 Google Inc.
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  default-language:
    Haskell2010

  exposed-modules:
    Data.HashMap.RobinHood.Base

  other-modules:       
    Data.HashMap.RobinHood.Ref

  other-extensions:
    BangPatterns
    MultiParamTypeClasses
    TypeFamilies

  build-depends:
    base == 4.6.*,
    primitive == 0.5.*,
    hashable == 1.2.*,
    vector == 0.10.*
