name:                robinhood
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Lennart Kolmodin
maintainer:          kolmodin@gmail.com
copyright:           2013 Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  default-language:
    Haskell2010

  exposed-modules:
    Data.HashMap.RobinHood
    Data.HashMap.RobinHood.Base
    Data.HashMap.RobinHood.ST

  other-modules:
    Data.HashMap.RobinHood.Internal
    Data.HashMap.RobinHood.Ref
    Data.HashMap.RobinHood.Monad

  other-extensions:
    BangPatterns
    MultiParamTypeClasses
    TypeFamilies

  build-depends:
    base == 4.6.*,
    mtl,
    primitive == 0.5.*,
    hashable == 1.2.*,
    vector == 0.10.*

executable example
  default-language:
    Haskell2010

  main-is: example.hs

  hs-source-dirs: tests

  build-depends:
    base == 4.6.*,
    robinhood,
    unordered-containers